--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,31 @@
   text-align: center;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+a:visited {
+  color: white;
+}
+p {
+  font-size: 1rem;
+}
+
+body {
+  background-color: #000000;
+  color: white;
+  margin: 0px !important;
+  padding: 0px !important;
+  border: 0px;
+}
+* {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  box-sizing: border-box;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +60,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul {
+  list-style-type: none;
 }
