--- a/src/Components/AuthForm/AuthForm.module.css
+++ b/src/Components/AuthForm/AuthForm.module.css
@@ -1,4 +1,4 @@
-.login {
+.auth {
   display: flex;
   flex-direction: column;
   width: 40%;
@@ -8,7 +8,7 @@
   margin: auto;
   background: rgb(19, 19, 19);
 }
-.login_container {
+.auth_container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -59,5 +59,5 @@
   cursor: not-allowed;
 }
 .error_text {
-  color: #b40e0e;
+  color: #e35518;
 }
