--- a/src/Components/CastCarousel/CastCarouselView.module.css
+++ b/src/Components/CastCarousel/CastCarouselView.module.css
@@ -35,10 +35,10 @@ hr {
   border: 0.5px solid #535353;
 }
 
-p {
+/* p {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
-}
+} */
 
 .editbutton {
   background: none;
