--- a/src/Components/SearchResult/SearchResult.module.css
+++ b/src/Components/SearchResult/SearchResult.module.css
@@ -11,11 +11,17 @@
   width: 7.2rem;
   height: 10.2rem;
 }
+.searchresulttitle {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .searchresult_right {
   display: flex;
   flex-direction: column;
   margin-left: 0.5rem;
   justify-content: space-between;
+  width: 100%;
 }
 .card {
   border-radius: 12px;
@@ -28,4 +34,16 @@
 }
 .overview {
   margin-top: 0.7rem;
+}
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-family: "Sofia Sans Semi Condensed", sans-serif;
+  text-align: right;
+  background: none;
+  margin-right: 1rem;
+  color: white;
+  cursor: pointer;
+  font-size: large;
 }
