--- a/src/Pages/Auth.module.css
+++ b/src/Pages/Auth.module.css
@@ -47,3 +47,15 @@
   font-weight: 800;
   margin-top: 2rem;
 }
+.authpage {
+  /* Change the image path to your own image */
+  background-image: url(../Images/Frame\ 1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: calc(100vh - 12rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
